--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@coreui/coreui-free-bootstrap-admin-template",
-  "version": "2.1.8",
+  "version": "2.1.9",
   "description": "Free Bootstrap Admin Template",
   "keywords": [
     "admin",
@@ -63,7 +63,7 @@
     "watch-pug": "nodemon -e pug -x \"npm run pug\""
   },
   "dependencies": {
-    "@coreui/coreui": "^2.0.26",
+    "@coreui/coreui": "^2.1.2",
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "1.2.0",
     "@coreui/icons": "0.3.0",
     "bootstrap": "4.1.3",
@@ -74,14 +74,14 @@
     "jquery": "3.3.1",
     "pace-progress": "1.0.2",
     "perfect-scrollbar": "1.4.0",
-    "popper.js": "1.14.4",
+    "popper.js": "^1.14.5",
     "simple-line-icons": "2.4.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.1.2",
-    "@babel/core": "^7.1.2",
+    "@babel/cli": "^7.1.5",
+    "@babel/core": "^7.1.6",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
-    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-env": "^7.1.6",
     "autoprefixer": "^9.3.1",
     "babel-eslint": "^10.0.1",
     "babel-plugin-transform-es2015-modules-strip": "^0.1.1",
@@ -90,22 +90,22 @@
     "clean-css-cli": "^4.2.1",
     "copyfiles": "^2.1.0",
     "cross-env": "^5.2.0",
-    "eslint": "^5.8.0",
+    "eslint": "^5.9.0",
     "eslint-plugin-compat": "^2.6.3",
     "foreach-cli": "^1.8.1",
     "js-beautify": "^1.8.8",
     "node-sass": "^4.10.0",
     "nodemon": "^1.18.6",
-    "npm-run-all": "^4.1.3",
+    "npm-run-all": "^4.1.5",
     "postcss-cli": "^6.0.1",
     "pug": "^2.0.3",
     "rimraf": "^2.6.2",
-    "shelljs": "^0.8.2",
-    "stylelint": "^9.7.1",
+    "shelljs": "^0.8.3",
+    "stylelint": "^9.8.0",
     "stylelint-config-recommended-scss": "^3.2.0",
     "stylelint-config-standard": "^18.2.0",
     "stylelint-order": "^1.0.0",
-    "stylelint-scss": "^3.3.2"
+    "stylelint-scss": "^3.4.0"
   },
   "engines": {
     "node": ">=6"
